--- a/app/views/calendars/show.html.haml
+++ b/app/views/calendars/show.html.haml
@@ -6,6 +6,6 @@
 = link_to "Edit", edit_calendar_path(@calendar)
 = link_to "Delete", calendar_path(@calendar), method: :delete
 %br
-/ = link_to "View List", calendar_lists_path(@calendar)
+= link_to "View Tasks", calendar_tasks_path(@calendar)
 %br
 = link_to "Home", root_path
