--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,3 +9,6 @@
     = link_to "Home", root_path, class: "btn btn-primary" 
     = link_to "Create Calendar", new_calendar_path, class: "btn btn-success"
     = yield
+    %div{:style => "position: absolute; width: 600px; height: 800px;"}
+  %div{:style => "position: absolute; bottom:5px"}
+    Website design by Zach Roof, Adam Kelsey, & Troy Lima.
