--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -1,3 +1,77 @@
-// Place all the styles related to the calendars controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+  A grey based theme, inspired by Blinksale and their ColorBurn widget. http://firewheeldesign.com
+  AUTHOR: Geoffrey Grosenbach http://nubyonrails.com
+  Colors:
+    dk: 787888
+    lt: 4f4f5b
+    lter: a8a8a8
+    white: ffffff
+*/
+
+/* TODO */
+
+.calendar {
+  margin: auto;
+  color: white;
+  text-align: center;
+}
+
+thead tr {
+  color: black;
+}
+
+.monthName th {
+  font-weight: normal;
+  text-align: right;
+  padding-top: 1em;
+  padding-bottom: 0.7em;
+  color: black;
+}
+
+.dayName th {
+  font-size: 0.7em;
+  padding-top: 0.6em;
+  padding-bottom: 0.3em;
+  background-color: #303030;
+  color: white;
+  border-bottom: 1px solid white;
+}
+
+.otherMonth, .day, .specialDay {
+  width: 12em;
+  height: 12em;
+  border-right: 1px solid #111111;
+}
+
+.otherMonth {
+  color: #999999;
+  background-color: #4f4f5b;
+}
+
+.day, .specialDay {
+  border-bottom: 1px solid #111111;
+  background-color: lightslategrey;
+}
+.specialDay {
+  background-color: #a8a8a8;
+  color: black;
+}
+.specialDay a, .specialDay a:visited, .specialDay a:hover {
+  color: white;
+  text-decoration: none;
+  padding: 1em;
+}
+.specialDay a:hover {
+  color: white;
+  background-color: black;
+}
+.weekendDay {
+  background-color: #787888;
+}
+.today {
+  background-color: white;
+  color: black;
+}
+.weekNumber {
+  background-color: #222;
+}
