--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,10 +1,13 @@
-%h1 Welcome
+%div.row
+  .col-md-12
+    %h1.welcome Welcome
 
-= link_to "Add Calendar", new_calendar_path
 %ul
   - @calendars.each do |c|
-    %li 
+    %li.move_over 
       =c.name
       =c.title
       %br
       = link_to "Show", calendar_path(c)
+
+      
