--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,5 @@
     = link_to "Create Calendar", new_calendar_path, class: "btn btn-success"
     = yield
     %div{:style => "position: absolute; width: 600px; height: 800px;"}
-  %div{:style => "position: absolute; bottom:5px"}
+  %div{:style => "position: fixed; bottom:5px"}
     Website design by Zach Roof, Adam Kelsey, & Troy Lima.
