--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -9,4 +9,5 @@
     = link_to "Show", calendar_task_path(@calendar, p)
   %br
   %br
+  = link_to "Back", calendar_path(@calendar)
   = link_to "Home", root_path
